Exemplo de upload de arquivo.

--- a/edworks-api/src/main/resources/application.properties
+++ b/edworks-api/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 spring.jpa.show-sql=true
+
+contato.disco.raiz=C:\\Users\\edwin\\Desktop
+contato.disco.diretorio-csv=csvs
