Configurando autenticação aplicação usuario em memoria.

--- a/edworks-api/src/main/resources/application.properties
+++ b/edworks-api/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.show-sql=true
 
 contato.disco.raiz=C:\\Users\\edwin\\Desktop
 contato.disco.diretorio-csv=csvs
+
+security.oauth2.cliente.scope=password
